# FInalProject

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py  telegram_app.py
notebooks/: Analysis.ipynb  Training.ipynb
src/: config.py
src/neuro/: classification.py  gpt.py  summarization.py
src/pages/: summarize_page.py
src/processings/: document_processing.py
